# Hermes-Box

./: .gitignore  2026-05-09_HermesBox-v2源码精简清单.md  CLAUDE.md  README.md  README_zh.md  SKILL-hermes-color-adjustment.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
bridge/: README.md  claude-code-approval-bridge.sh  hermes-approval-bridge.sh  test-bridge.sh  test-hermes-bridge.sh
scripts/: test-hermes-colors.sh
src/: App.module.css  App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: approval.rs  lib.rs  main.rs  pty.rs  terminal.rs  tray.rs  window.rs
worklog/: DIAG-2026-05-11-full-bug-audit.md  FEAT-2026-05-08-v2-rebuild-phase1-5.md  FEAT-2026-05-10-v2-rebuild-phase6.md  FEAT-2026-05-12-fix-approval-sound-preview.md  FEAT-2026-05-12-launch-in-default-terminal.md  FEAT-2026-05-12-tab-context-menu-and-lock.md  FEAT-2026-05-13-hermes-colors-settings.md  FIX-2026-05-08-code-review-and-security-hardening.md  FIX-2026-05-08-multitab-performance-debug.md  FIX-2026-05-08-multitab-performance-optimization.md  FIX-2026-05-09-multitab-rows5.md  FIX-2026-05-09-term-open-timing.md  FIX-2026-05-10-phase6-runtime-crash-and-tray.md  FIX-2026-05-11-pty-resize-dedup.md  FIX-2026-05-11-shell-prompt和多余显示修复经验.md  FIX-2026-05-12-approval-ui-thread-safety.md  FIX-2026-05-13-hermes-colors-path-discovery.md  FIX-2026-05-13-review-g1-g2-g3.md  FIX-2026-05-14-cli-exec-args-and-deepseek.md  FIX-2026-05-14-theme-system-code-review.md  (+24 more)
(+83 files in other folders)
