[package]
name = "hermes-box-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_box_v2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
portable-pty = "0.9"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
